--- a/.travis.yml
+++ b/.travis.yml
@@ -43,10 +43,6 @@ matrix:
       env: MB_PYTHON_VERSION=2.7
     - os: linux
       env:
-        - MB_PYTHON_VERSION=2.7
-        - UNICODE_WIDTH=16
-    - os: linux
-      env:
         - MB_PYTHON_VERSION=3.5
     - os: linux
       env:
@@ -58,6 +54,22 @@ matrix:
       env:
         - MB_PYTHON_VERSION=3.8
         - MB_ML_VER=2010
+
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=2.7
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=3.5
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=3.6
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=3.7
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=3.8
 
 before_install:
     - git clone https://github.com/matthew-brett/multibuild.git
